# audio_piple

./: .gitignore  LICENSE  README.md
esp_websocket_client/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.old
esp_websocket_client/main/: websocket_example.c
file_distribution_server/: README.md  __init__.py  file_processor.py  main.py  pyproject.toml  run.sh  ws_client.py  ws_manager.py
file_distribution_server/instruct/: client_simulator_instruct.md  protocol_instruct.md  server_instruct.md
file_distribution_server/static/: manifest.json
